# memokaso

./: README.md  pyproject.toml  run.py
memo_app/: __init__.py  config.py  routes.py
memo_app/forms/: login.py  signup.py
memo_app/models/: user.py
memo_app/static/css/: font.css
memo_app/templates/: base.html  login.html  signup.html
memo_app/templates/components/: header.html
memo_app/templates/errors/: 403_csrf.html
memo_app/views/: __init__.py  login.py  signup.py
migrations/versions/: c0f28ebd8ba8_.py
